--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,23 +7,28 @@
 
   <TextView
       android:id="@+id/name"
-      style="@style/StatusText"/>
+      style="@style/StatusText"
+      android:textColor="#00FFFFFF" />
 
   <TextView
       android:id="@+id/opponent_name"
-      style="@style/StatusText"/>
+      style="@style/StatusText"
+      android:textColor="#00FFFFFF" />
 
   <TextView
       android:id="@+id/status"
-      style="@style/StatusText"/>
+      style="@style/StatusText"
+      android:textColor="#00FFFFFF" />
 
   <TextView
       android:id="@+id/score"
       android:layout_width="match_parent"
       android:layout_height="0dp"
       android:layout_weight="1"
+      android:allowUndo="false"
       android:gravity="center"
-      android:textSize="80sp"/>
+      android:textColor="#00FFFFFF"
+      android:textSize="80sp" />
 
   <LinearLayout
       android:layout_width="match_parent"
@@ -32,9 +37,10 @@
 
     <Button
         android:id="@+id/rock"
+        style="@style/MoveButton"
         android:drawableTop="@drawable/rock"
         android:text="@string/choice_rock"
-        style="@style/MoveButton"/>
+        android:textSize="12sp" />
 
     <Button
         android:id="@+id/paper"
